# core

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  flash-core-amazon  flash-test  flash-test-then-core-amazon  tail-device  tail-forever
firmware/common/: board_definition.cpp
firmware/core/: CMakeLists.txt  dependencies.sd  main.cpp
firmware/main/: CMakeLists.txt  arduino-libraries  dependencies.sd
firmware/test/: CMakeLists.txt  arduino-libraries  build.gradle  check_core.cpp  dependencies.sd  main.cpp  test.ino
hardware/: Makefile  fk-core-2.kicad_pcb  fk-core-B.Cu.gbr  fk-core-B.Mask.gbr  fk-core-B.Paste.gbr  fk-core-B.SilkS.gbr  fk-core-Edge.Cuts.gbr  fk-core-F.Cu.gbr  fk-core-F.Mask.gbr  fk-core-F.Paste.gbr  fk-core-F.SilkS.gbr  fk-core-cache.lib  fk-core-rescue.lib  fk-core.drl  fk-core.kicad_pcb  fk-core.kicad_pcb.orig  fk-core.net  fk-core.pro  fk-core.sch  fp-lib-table  group-bom.py  sym-lib-table
hardware/bom/: ibom.html
hardware/fk-core/: fk-core-cache.lib  fk-core.kicad_pcb  fk-core.net  fk-core.pro  fk-core.sch  fp-lib-table  mcu.sch  periph.sch  power.sch
hardware/fk-core-mini-ultra-pro/: MINI-ULTRA-PRO-cache.lib  MINI-ULTRA-PRO.kicad_pcb  MINI-ULTRA-PRO.net  MINI-ULTRA-PRO.pro  MINI-ULTRA-PRO.sch  fp-lib-table  microsd.lib  ws2812.lib
hardware/fk-core-mini-ultra-pro/microsd.pretty/: MICROSD.kicad_mod
hardware/fk-core/logos.pretty/: conservify_text_negative_4000.kicad_mod  conservify_text_negative_4500.kicad_mod  conservify_text_negative_5000.kicad_mod  ngfk_negative_3500.kicad_mod  osh_negative_3000.kicad_mod
hardware/gerbers/: fk-core-B.Cu.gbr  fk-core-B.Mask.gbr  fk-core-B.Paste.gbr  fk-core-B.SilkS.gbr  fk-core-Edge.Cuts.gbr  fk-core-F.Cu.gbr  fk-core-F.Mask.gbr  fk-core-F.Paste.gbr  fk-core-F.SilkS.gbr  fk-core-NPTH.drl  fk-core-PTH.drl  fk-core.drl
hardware/gerbers/v0.14/: fk-core-B.Cu.gbr  fk-core-B.Mask.gbr  fk-core-B.Paste.gbr  fk-core-B.SilkS.gbr  fk-core-Edge.Cuts.gbr  fk-core-F.Cu.gbr  fk-core-F.Mask.gbr  fk-core-F.Paste.gbr  fk-core-F.SilkS.gbr  fk-core-GND.gbr  fk-core-PWR.gbr  fk-core.drl
hardware/gerbers/v0.15/: fk-core-B.Cu.gbr  fk-core-B.Mask.gbr  fk-core-B.Paste.gbr  fk-core-B.SilkS.gbr  fk-core-Edge.Cuts.gbr  fk-core-F.Cu.gbr  fk-core-F.Mask.gbr  fk-core-F.Paste.gbr  fk-core-F.SilkS.gbr  fk-core-GND.gbr  fk-core-PWR.gbr  fk-core.drl
hardware/kicad/: atsamd21g-m.lib  dcbarrelsmt.lib  fgpmmopa6h.lib  gp-635tsmd.lib  ina219.lib  max1704xx.bak  max1704xx.lib  mcp73871.lib  pcf8523t.lib  rf-sma-edge.lib  rfm9xw.lib  sk6812.lib  tps63060.lib  xtal-3.2x1.lib  xtal32x15.lib
hardware/panelized/: fk-core-v0.15-01x04.kicad_pcb  fk-core-v0.15A-01x04.kicad_pcb
hardware/panelized/gerbers/: fk-core-v0.15-01x04-B.Cu.gbr  fk-core-v0.15-01x04-B.Mask.gbr  fk-core-v0.15-01x04-B.Paste.gbr  fk-core-v0.15-01x04-B.SilkS.gbr  fk-core-v0.15-01x04-Edge.Cuts.gbr  fk-core-v0.15-01x04-F.Cu.gbr  fk-core-v0.15-01x04-F.Mask.gbr  fk-core-v0.15-01x04-F.Paste.gbr  fk-core-v0.15-01x04-F.SilkS.gbr  fk-core-v0.15-01x04-GND.gbr  fk-core-v0.15-01x04-PWR.gbr  fk-core-v0.15-01x04.drl
hw/: fk-core-cache.lib  fk-core.kicad_pcb  fk-core.net  fk-core.sch
hw/gerbers/: fk-core-B.Cu.gbr  fk-core-B.Mask.gbr  fk-core-B.SilkS.gbr  fk-core-F.Cu.gbr  fk-core-F.Paste.gbr  fk-core-F.SilkS.gbr
